# darknet_challenges

./: LICENSE
01_TestInProduction/: CMakeLists.txt  README.md
01_TestInProduction/src/: encryptedBuffer.cpp  encryptedBuffer.h  main.cpp  test.cpp
02_BewareUnboundedActions/: CMakeLists.txt  README.md
02_BewareUnboundedActions/src/: main.cpp  records.cpp  records.h
03_WhatTypeOfProblem/: CMakeLists.txt  README.md
03_WhatTypeOfProblem/npcScripts/: cmdc0de.txt  flag.txt  gourry.txt  gulo.txt
03_WhatTypeOfProblem/src/: main.cpp  messageProcessor.cpp  messageProcessor.h  messages.h
