cmake_minimum_required(VERSION 3.10)

project(dcdn30_TestInProduction)

set(CMAKE_CXX_STANDARD 20)
set(MAIN_SOURCES
    src/main.cpp
    src/encryptedBuffer.h
    src/encryptedBuffer.cpp
)

set(TEST_SOURCES
    src/encryptedBuffer.h
    src/encryptedBuffer.cpp
    src/test.cpp
)
add_executable(encryptedBuffer ${MAIN_SOURCES})

include(FetchContent)
FetchContent_Declare(
    googletest
    URL https://github.com/google/googletest/archive/609281088cfefc76f9d0ce82e1ff6c30cc3591e5.zip
)

# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

enable_testing()

add_executable(
    test_encryptedBuffer
    ${TEST_SOURCES}
)
target_link_libraries(
    test_encryptedBuffer
    gtest_main
)

include(GoogleTest)
gtest_discover_tests(test_encryptedBuffer)